--- a/View/WeatherWindow.xaml
+++ b/View/WeatherWindow.xaml
@@ -30,13 +30,17 @@
         </Grid.RowDefinitions>
         <StackPanel Margin="20">
             <TextBlock Text="Search for a city:" />
-            <TextBox Text="{Binding Query, Mode=TwoWay}" />
-            <Button Margin="0,10" Content="Search" />
-            <ListView>
+            <TextBox Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button
+                Margin="0,10"
+                Command="{Binding SearchCommand}"
+                CommandParameter="{Binding Query}"
+                Content="Search" />
+            <ListView ItemsSource="{Binding Cities}" SelectedValue="{Binding SelectedCity}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <TextBox />
+                            <TextBlock Text="{Binding LocalizedName}" />
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
