--- a/View/WeatherWindow.xaml
+++ b/View/WeatherWindow.xaml
@@ -4,19 +4,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Model="clr-namespace:WeatherCloneApp.Model"
     xmlns:View="clr-namespace:WeatherCloneApp.View"
+    xmlns:converters="clr-namespace:WeatherCloneApp.ViewModel.ValueConverters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:WeatherCloneApp.ViewModel"
+    DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
+    mc:Ignorable="d"
     Title="WeatherWindow"
     Width="400"
-    Height="600"
-    mc:Ignorable="d">
+    Height="600">
     <Window.Resources>
         <!--
             create object of WeatherVM <vm:WeatherVM and it will
             be called "vm" (x:Key="vm")
         -->
-        <vm:WeatherVM x:Key="VM" />
+        <vm:WeatherVM  x:Key="VM" />
+        <converters:BoolToRainConverter x:Key="boolToRain" />
     </Window.Resources>
     <!--
         Now we want to provide to xaml our WeatherVM class fuctionality
@@ -57,15 +60,20 @@
             <StackPanel Margin="0,10">
                 <TextBlock
                     Margin="20,0"
+                    DataContext="{StaticResource VM}"
                     FontSize="20"
                     Foreground="Beige"
-                    Text="{Binding SelectedCity.LocalizedName, Source={StaticResource VM}}" />
+                    Text="{Binding SelectedCity.LocalizedName}" />
                 <TextBlock
                     Margin="20,0"
-                    DataContext="{Binding}"
                     FontSize="18"
                     Foreground="Beige"
-                    Text="{Binding CurrentCondition.WeatherText, Source={StaticResource VM}}" />
+                    Text="{Binding WeatherText}" />
+                <TextBlock
+                    Margin="20,0"
+                    FontSize="16"
+                    Foreground="Beige"
+                    Text="{Binding HasPrecipitation, Converter={StaticResource boolToRain}}" />
             </StackPanel>
             <!--
                 StringFormat={first brackets are for text}{second are for pointing value to itself or any other value you want } after that you can make extra text which in our case will be 'C'
